# ogre

./: .gitignore  CLAUDE.md  Cargo.toml  IMPROVEMENTS.md  IMPROVEMENTSv2.md  README.md  TODOv2.1.md  TODOv2.md  pyproject.toml
benches/: interpreter.rs
claudedocs/: RETRO.md
docs/: architecture.md  brainfunct-guide.md  changelog.md  cli-reference.md  debugger-and-compilation.md  design-decisions.md  functions.md  getting-started.md  ir-and-optimization.md  preprocessor.md  project-management.md  stdlib-reference.md  swapping-values.md  system-design.md  testing.md
examples/cat/: ogre.toml
examples/convert/: ogre.toml
examples/fibonacci/: ogre.toml
examples/hello/: ogre.toml
examples/multifile/: ogre.toml
examples/stdlib-demo/: ogre.toml
examples/stdlib-tests/: ogre.toml
featureideas/: README.md  compiler.md  debugger.md  ecosystem.md  ide.md  language.md  round2.md  stdlib.md  testing.md  tooling.md
ogre/: interpreter.py  ogre.py  start.py
src/: error.rs  lib.rs  main.rs  project.rs  verbosity.rs
src/modes/: analyse.rs  bench.rs  check.rs  clean.rs  compile.rs  compile_llvm.rs  compile_wasm.rs  debug.rs  dialect.rs  directive_parser.rs  doc.rs  explain.rs  format.rs  generate.rs  init.rs  interpreter.rs  ir.rs  lint.rs  minify.rs  mod.rs  new.rs  pack.rs  preprocess.rs  profile.rs  run.rs  source_map.rs  start.rs  stdlib.rs  test_runner.rs  trace.rs
src/ogre/: interpreter.py  main.py  ogre.py
stdlib/: ascii.bf  cli.bf  convert.bf  debug.bf  io.bf  logic.bf  math.bf  memory.bf  string.bf
stdlibdocs/: ascii.md  cli.md  convert.md  debug.md  index.md  io.md  logic.md  math.md  memory.md  string.md
stdlibtests/: ogre.toml
stdlibtests/src/: test_ascii_isalpha.bf  test_ascii_isdigit.bf  test_ascii_islower.bf  test_ascii_isnewline.bf  test_ascii_isprintable.bf  test_ascii_isupper.bf  test_ascii_print.bf  test_ascii_printdigit.bf  test_ascii_tolower.bf  test_ascii_toupper.bf  test_cli_errorprefix.bf  test_cli_match.bf  test_cli_readflag.bf  test_cli_skipdashes.bf  (+81 more)
tests/: cli_integration.rs  format_integration.rs  generate_integration.rs  interpreter_integration.rs  preprocess_integration.rs  test_ogre_run.py  test_ogre_run_basic.py  test_ogre_test.py
(+58 files in other folders)
