[package]
name = "ogre"
version = "0.1.0"
edition = "2021"

[lib]
name = "ogre"
path = "src/lib.rs"

[[bin]]
name = "ogre"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.31", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
