[tool.poetry]
name = "ogre"
version = "0.1.0"
description = ""
authors = ["trentzz <z.trent.w@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


pyyaml = "^6.0.1"
argparse = "^1.4.0"
pytest = "^8.2.2"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ogre = "ogre.main:main"

[tool.poetry.group.test.dependencies]
pytest-mock = "*"